jobs/Salesforce/mbmrtt/force-app/main/default/objects/Currency_Rate__c/Currency_Rate__c.object-meta.xml
<CustomObject>
    <description>Custom object to be used with the Exchange Rates Service from and to Czech Koruna</description>
    <label>Currency Rate</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Currency Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>