jobs/Salesforce/mbmrtt/force-app/main/default/objects/Currency_Rate__c/fields/Base_Amount__c.field-meta.xml
<CustomField>
    <fullName>Base_Amount__c</fullName>
    <description>Unit amount of the base currency in the exchange</description>
    <label>Base Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>