jobs/Salesforce/mbmrtt/force-app/main/default/objects/Currency_Rate__c/fields/Base_Code__c.field-meta.xml
<CustomField>
    <fullName>Base_Code__c</fullName>
    <description>Currency ISO Code for the base currency in the given exchange rate</description>
    <label>Base Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CZK</fullName>
                <default>true</default>
                <label>CZK</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>