jobs/Salesforce/mbmrtt/force-app/main/default/objects/Currency_Rate__c/fields/Base_Currency__c.field-meta.xml
<CustomField>
    <fullName>Base_Currency__c</fullName>
    <description>The base currency to which the exchange rates are referring</description>
    <label>Base Currency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Czech - Koruna</fullName>
                <default>true</default>
                <label>Czech - Koruna</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>