jobs/Salesforce/mbmrtt/force-app/main/default/objects/Currency_Rate__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error Message provided by the API, or by the processing Apex</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>