jobs/Salesforce/mbmrtt/force-app/main/default/objects/Currency_Rate__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>/* for a job that runs once a day (every 1440 mins), with an update window of 3 hours (180) */
IF(
   (ROUND(((NOW() - LastModifiedDate)*1440),1) &gt; 1440 + 180), /* Over the update window */
    &apos;Unable to update this rate due to data integrity&apos;, 
    IF(
       NOT(ISBLANK(Error_Message__c)),
       Error_Message__c,
       &apos;Up to date&apos;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>