jobs/Salesforce/mbmrtt/force-app/main/default/objects/Currency_Rate__c/fields/Target_Amount__c.field-meta.xml
<CustomField>
    <fullName>Target_Amount__c</fullName>
    <description>Exchange rate for the target currency from the base currency</description>
    <label>Target Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>