jobs/Salesforce/mbmrtt/force-app/main/default/objects/Currency_Rate__c/fields/Target_Code__c.field-meta.xml
<CustomField>
    <fullName>Target_Code__c</fullName>
    <description>Currency ISO Code for the target currency in the given exchange rate</description>
    <label>Target Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>BGN</fullName>
            </value>
            <value>
                <fullName>BRL</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>CHF</fullName>
            </value>
            <value>
                <fullName>CNY</fullName>
            </value>
            <value>
                <fullName>DKK</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>HKD</fullName>
            </value>
            <value>
                <fullName>HUF</fullName>
            </value>
            <value>
                <fullName>IDR</fullName>
            </value>
            <value>
                <fullName>ILS</fullName>
            </value>
            <value>
                <fullName>INR</fullName>
            </value>
            <value>
                <fullName>ISK</fullName>
            </value>
            <value>
                <fullName>JPY</fullName>
            </value>
            <value>
                <fullName>KRW</fullName>
            </value>
            <value>
                <fullName>MXN</fullName>
            </value>
            <value>
                <fullName>MYR</fullName>
            </value>
            <value>
                <fullName>NOK</fullName>
            </value>
            <value>
                <fullName>NZD</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>PLN</fullName>
            </value>
            <value>
                <fullName>RON</fullName>
            </value>
            <value>
                <fullName>SEK</fullName>
            </value>
            <value>
                <fullName>SGD</fullName>
            </value>
            <value>
                <fullName>THB</fullName>
            </value>
            <value>
                <fullName>TRY</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>XDR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>