jobs/Salesforce/mbmrtt/force-app/main/default/objects/Currency_Rate__c/fields/Target_Currency__c.field-meta.xml
<CustomField>
    <fullName>Target_Currency__c</fullName>
    <description>Name of the currency in English, for example: Australia - Dollar</description>
    <label>Target Currency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Australia - Dollar</fullName>
            </value>
            <value>
                <fullName>Brazil - Real</fullName>
            </value>
            <value>
                <fullName>British Pound</fullName>
            </value>
            <value>
                <fullName>Bulgaria - Lev</fullName>
            </value>
            <value>
                <fullName>Canada - Dollar</fullName>
            </value>
            <value>
                <fullName>China - Renminbi</fullName>
            </value>
            <value>
                <fullName>Denmark - Krone</fullName>
            </value>
            <value>
                <fullName>EMU - Euro</fullName>
            </value>
            <value>
                <fullName>Hongkong - Dollar</fullName>
            </value>
            <value>
                <fullName>Hungary - Forint</fullName>
            </value>
            <value>
                <fullName>IMF - SDR</fullName>
            </value>
            <value>
                <fullName>Iceland - Krona</fullName>
            </value>
            <value>
                <fullName>India - Rupee</fullName>
            </value>
            <value>
                <fullName>Indonesia - Rupiah</fullName>
            </value>
            <value>
                <fullName>Israel - New Shekel</fullName>
            </value>
            <value>
                <fullName>Japan - Yen</fullName>
            </value>
            <value>
                <fullName>Malaysia - Ringgit</fullName>
            </value>
            <value>
                <fullName>Mexico - Peso</fullName>
            </value>
            <value>
                <fullName>New Zealand - Dollar</fullName>
            </value>
            <value>
                <fullName>Norway - Krone</fullName>
            </value>
            <value>
                <fullName>Philippines - Peso</fullName>
            </value>
            <value>
                <fullName>Poland - Zloty</fullName>
            </value>
            <value>
                <fullName>Romania - Leu</fullName>
            </value>
            <value>
                <fullName>SDR</fullName>
            </value>
            <value>
                <fullName>Singapore - Dollar</fullName>
            </value>
            <value>
                <fullName>South Africa - Rand</fullName>
            </value>
            <value>
                <fullName>South Korea - Won</fullName>
            </value>
            <value>
                <fullName>Sweden - Krona</fullName>
            </value>
            <value>
                <fullName>Switzerland - Franc</fullName>
            </value>
            <value>
                <fullName>Thailand - Baht</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>