jobs/Salesforce/mbmrtt/force-app/main/default/objects/Currency_Rate__c/listViews/Rates_Into_CZK.listView-meta.xml
<ListView>
    <fullName>Rates_Into_CZK</fullName>
    <columns>Base_Currency__c</columns>
    <columns>Base_Code__c</columns>
    <columns>Base_Amount__c</columns>
    <columns>Target_Amount__c</columns>
    <columns>Target_Code__c</columns>
    <columns>Target_Currency__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>_CZK</value>
    </filters>
    <label>Rates Into CZK</label>
</ListView>